fix footer overlapping content in mobile

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -21,12 +21,24 @@ html {
 body {
   background-color: black;
   margin-bottom: 200px;
+  
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+html, body {
+  height: 100%;
+}
+
+.content-wrapper {
+  flex: 1 0 auto;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
+  flex-shrink: 0;
   width: 100%;
+
 }
 
 a {
